core/core-common/src/datatypes/snapshots/proton_core_common__datatypes__contact_details__test__get_from_contact_basic_2_emails.snap
---
source: core/core-common/src/datatypes/contact_details.rs
expression: "&details"
---
InspectableContactDetails {
    id: LocalContactId(
        1,
    ),
    remote_id: Some(
        ContactId(
            "42",
        ),
    ),
    avatar_information: AvatarInformation {
        text: "P",
        color: "#52CD96",
    },
    extended_name: ExtendedName {
        last: None,
        first: Some(
            "Peter Parker",
        ),
        additional: None,
        prefix: None,
        suffix: None,
    },
    fields: [
        Emails(
            [
                ContactDetailsEmail {
                    email_type: [],
                    email: pXXXX@XXXXX,
                },
                ContactDetailsEmail {
                    email_type: [],
                    email: pXXXX@XXXXXXXX,
                },
            ],
        ),
    ],
}
